--- a/index.html
+++ b/index.html
@@ -9,9 +9,45 @@
 </head>
 
 <body>
-  MY SITE
-  <script src="script.js"></script>
+  <div class="cabeçalho">
+  <h3><a href="pages/posts/mostrarlivros">·Livros·</a></h3>
+  <h3><a href="pages/posts/mostrarcategorias">·Categorias·</a></h3>
+  <h3><a href="/posts/mostrarmaisvendidos">·Mais Vendidos·</a></h3>  
+  <h3><a href="/posts/todosautores">·Lançamentos·</a></h3>
+  </div>
 
+<div class="botão1"></div>
+  
+  <div class="botão"><h2>INDICAÇÕES DE LIVROS</h2></div>
+<br/><br/><br/><br/><br/><br/><br/><br/>
+   <div className="botão2">
+<div>
+  
+  <center>
+  <div className="botão4">
+<h2 className="titlem">Heartstopper - vol. 1 e 2</h2>
+    </div></center>
+  <h3 className="titlem2">
+<p>Charlie Spring e Nick Nelson não tem
+quase nada em comum.<br /> Charlie é um aluno dedicado e muito inseguro por causa do bullying que sofre no colegio.<br /> Nick é muito popular especialmente querido por ser grande jogador de rugby. <br />No segundo volume da série Heartstopper,<br /> Charlie e Nick precisam entender o que... um beijo significa uma união de dois e.<br /> Charlie e Nick são melhores amigos, mas tudo muda depois que eles se beijam na 
+Festa.</p></h3>
+
+  <div class="title"><h2>𝓎𝑜𝓊 𝒹𝓇𝑒𝓌 𝒶𝓇𝓇𝑜𝓊𝓃𝒹 𝓂𝓎 𝓈𝒸𝒶𝓇𝓈</h2></div>
+  <br/><br/><br/><br/><br/><br/><br/><br/>
+
+  
+<center>
+  <div className="botão7">
+<h2 className="titlem">Box Castelo Animado</h2>
+    </div></center>
+  <h3 className="titlem2">
+<p>Apesar de ser uma série, cada livro tem sua própria história e protagonista.<br /> No entanto, personagens de Howl's Moving Castle como Sophie e<br /> o mago Howl sempre aparecem em outros livros envolvidos no caos.<br /> Em A Casa dos Muitos Caminhos, nosso protagonista é o presidente,<br /> um adolescente um tanto mimado que não sabe nada, só quer ler.<br /> Um dia, ela é forçada por tia Sempronia a cuidar da casa de um tio bruxo <br />doente que passará uma temporada ao ar livre se recuperando com os elfos.</p></h3>
+
+
+ <h3><div class="rodape">Feito Por : Maria Carolina de Oliveira</div></h3>
+              
+</div>
+   </div>
  <!--
   This script places a badge on your repl's full-browser view back to your repl's cover
   page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
