--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <h3><a href="pages/posts/mostrarlivros">·Livros·</a></h3>
   <h3><a href="pages/posts/mostrarcategorias">·Categorias·</a></h3>
   <h3><a href="/posts/mostrarmaisvendidos">·Mais Vendidos·</a></h3>  
-  <h3><a href="/posts/todosautores">·Lançamentos·</a></h3>
+  <h3><a href="pages/posts/todosautores">·Lançamentos·</a></h3>
   </div>
 
 <div class="botão1"></div>
