--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 <body>
   <div class="cabeçalho">
-  <h3><a href="pages/posts/mostrarlivros">·Livros·</a></h3>
-  <h3><a href="pages/posts/mostrarcategorias">·Categorias·</a></h3>
-  <h3><a href="/posts/mostrarmaisvendidos">·Mais Vendidos·</a></h3>  
-  <h3><a href="pages/posts/todosautores">·Lançamentos·</a></h3>
+  <h3><a href="/pages/posts/mostrarlivros.html">·Livros·</a></h3>
+  <h3><a href="/pages/posts/mostrarcategorias.html">·Categorias·</a></h3>
+  <h3><a href="/pages/posts/mostrarmaisvendidos.html">·Mais Vendidos·</a></h3>  
+  <h3><a href="/pages/posts/mostrarlancamentos.html">·Lançamentos·</a></h3>
   </div>
 
 <div class="botão1"></div>
